[tool.poetry]
name = "flight_info"
version = "0.1.2"
description = "A package for obtaining information for scheduled flights"
authors = ["Joshua Wan"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
